fix(visually-hidden): remove absolute position
* by using `position: absolute`, in Chrome(and Brave as well) we get a weird error: looks like although the content that overflows is hidden by the `sections container`, the scroll bar behaves as if it wouldn't overflow
* in Firefox we don't have this error

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,6 @@ body {
   margin: 0;
   overflow: hidden;
   padding: 0;
-  position: absolute;
   width: 1px;
   white-space: nowrap;
 }
